# minigui

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  minigui.c
include/: minigui.h  minigui_menu.h
include/screens/: screen_home.h  screen_logs.h  screen_settings.h
src/: minigui.c  minigui_menu.c
src/screens/: screen_home.c  screen_logs.c  screen_settings.c
